--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+// Ensure ShowHeader is true by default if it's not set in a page
+    var ShowHeader = ViewBag.ShowHeader ?? true;
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,39 +15,38 @@
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">QuickBite</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
+
+@if (ShowHeader)
+{
+<header class='absolute left-0 top-0 z-10 w-full'>
+    <nav class="flex items-center justify-between py-3 px-4 sm:px-10 w-full">
+        <div class="w-full flex justify-start sm:ml-[150px] md:justify-center">
+            <div class="">
+                <a href="/" class='flex gap-1 items-center'>
+                    <img src="~/icons/qbLogo.svg" alt="quickbite logo" width="100" height="100" class=''/>
+                    <div class="hidden sm:flex items-center text-[25px]">
+                        <h1 class='font-bold text-white'>Quick</h1>
+                        <span class='text-yellow font-bold'>Bite</span>
+                    </div>
+                </a>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+        </div>
+        <partial name="_LoginPartial" />
+    </nav>
+</header>
+}
+    <div class="">
+        <main role="main" >
             @RenderBody()
         </main>
+        @*<partial name="ExamplePartial" />*@
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    @*<footer class="">
+        <div class="">
             &copy; 2024 - QuickBite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
