--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<div class="flex gap-4 items-center justify-end w-full md:w-[200px]">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -16,11 +16,16 @@
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+            
+        <div class="text-white duration-300 transition-all hover:text-[#e8e8e8]">
+            <a class='text-sm font-semibold' asp-area="Identity" asp-page="/Account/Login">
+                Login
+            </a>
+        </div>
+        <div class="">
+            <a  class='bg-yellow text-black text-sm font-semibold py-2 px-5 rounded-full' asp-area="Identity" asp-page="/Account/Register">
+                Sign Up
+            </a>
+        </div>
 }
-</ul>
+</div>
