--- a/QuickBite/Views/Home/Index.cshtml
+++ b/QuickBite/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @model IEnumerable<QuickBite.Controllers.HomeController.ExampleModel>
 @{
     ViewData["Title"] = "Home Page";
+    Layout = "_Layout";
 }
 @section scripts{
     <script>
