--- a/QuickBite/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/QuickBite/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -2,16 +2,32 @@
 @model RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
+    Layout = "_EmailConfirmLayout";
 }
 
-<h1>@ViewData["Title"]</h1>
+
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+        <div class="">
+            <div class="w-full h-screen flex justify-center items-center flex-col">
+                <img src="~/img/confirmEmail.png" class="w-64"/>
+                <p class="text-4xl py-4">To complete the register process</p>
+                <a id="confirm-link" class="mt-3" href="@Model.EmailConfirmationUrl">
+                    <button class="learn-more">
+                        <span class="circle pl-2" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                        </span>
+                        <span class="button-text">Confirm Account</span>
+                    </button>
+                </a>
+                
+                
+            </div>
+            
+        </div>
+    
+
     }
     else
     {
