--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@ else
 {
             
         <div class="text-white duration-300 transition-all hover:text-[#e8e8e8]">
-            <a class='text-sm font-semibold' asp-area="Identity" asp-page="/Account/Login">
+            <a class='text-sm font-semibold text-black' asp-area="Identity" asp-page="/Account/Login">
                 Login
             </a>
         </div>
