made header background transparent for home page design

--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body class="mb-0">
 
-<header class='absolute left-0 top-0 z-10 w-full bg-[#7cb69d]'>
+<header class='absolute left-0 top-0 z-10 w-full'>
     <nav class="flex items-center justify-between py-3 px-4 sm:px-10 w-full">
         <div class="w-full flex justify-start sm:ml-[150px] md:justify-center">
             <div class="">
