started partner registration stuff

--- a/QuickBite/Areas/Identity/Pages/Account/Login.cshtml
+++ b/QuickBite/Areas/Identity/Pages/Account/Login.cshtml
@@ -63,6 +63,10 @@
             <p class="text-gray-400">Don't have an account?</p>
             <a asp-area="Identity" asp-page="/Account/Register" class="text-black font-semibold">Sign Up!</a>
         </div>
+        <!-- Partner Sign-in -->
+        <div>
+            <p>Looking for Partner Registration?</p>
+        </div>
     </div>
 </div>
 
