--- a/QuickBite/Areas/Restaurant/Views/Menu/Create.cshtml
+++ b/QuickBite/Areas/Restaurant/Views/Menu/Create.cshtml
@@ -10,7 +10,7 @@
 
 <div class="flex justify-center">
     <div class="w-full max-w-lg">
-        <form action="/Restaurant/Menu/Create" method="POST" enctype="multipart/form-data" class="space-y-4">
+        <form  asp-controller="Menu" asp-action="Create"method="post" enctype="multipart/form-data" class="space-y-4">
             <div asp-validation-summary="ModelOnly" class="text-red-600 mb-4"></div>
 
             <!-- Name Field -->
