--- a/QuickBite/Areas/SiteAdmin/Views/Restaurants/Index.cshtml
+++ b/QuickBite/Areas/SiteAdmin/Views/Restaurants/Index.cshtml
@@ -23,14 +23,46 @@
                     <th class="px-4 py-2 text-left text-sm font-medium text-gray-600 border-b">
                         @Html.DisplayNameFor(model => model.FirstOrDefault().Description)
                     </th>
-                  
+                    <th class="px-4 py-2 text-left text-sm font-medium text-gray-600 border-b">
+                        Status
+                    </th>
                     <th class="px-4 py-2 text-right text-sm font-medium text-gray-600 border-b">
                         Actions
                     </th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                <!-- Unaccepted Restaurants -->
+                @foreach (var item in Model.Where(r => !r.isAccepted))
+                {
+                    <tr class="hover:bg-red-50 bg-red-100">
+                        <td class="px-4 py-2 text-gray-700 font-bold border-b">
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td class="px-4 py-2 text-gray-700 border-b">
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td class="px-4 py-2 text-gray-700 border-b">
+                            <span class="text-red-500 font-semibold">Pending Review</span>
+                        </td>
+                        <td class="px-4 py-2 text-right border-b">
+                            <a asp-action="Edit" asp-route-id="@item.RestaurantId" class="text-blue-500 hover:underline">
+                                Edit
+                            </a>
+                            <span class="text-gray-400 mx-2">|</span>
+                            <a asp-action="Details" asp-route-id="@item.RestaurantId" class="text-green-500 hover:underline">
+                                Details
+                            </a>
+                            <span class="text-gray-400 mx-2">|</span>
+                            <a asp-action="Delete" asp-route-id="@item.RestaurantId" class="text-red-500 hover:underline">
+                                Delete
+                            </a>
+                        </td>
+                    </tr>
+                }
+
+                <!-- Accepted Restaurants -->
+                @foreach (var item in Model.Where(r => r.isAccepted))
                 {
                     <tr class="hover:bg-gray-50">
                         <td class="px-4 py-2 text-gray-700 border-b">
@@ -39,7 +71,9 @@
                         <td class="px-4 py-2 text-gray-700 border-b">
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
-                    
+                        <td class="px-4 py-2 text-gray-700 border-b">
+                            <span class="text-green-500 font-semibold">Accepted</span>
+                        </td>
                         <td class="px-4 py-2 text-right border-b">
                             <a asp-action="Edit" asp-route-id="@item.RestaurantId" class="text-blue-500 hover:underline">
                                 Edit
