--- a/QuickBite/Areas/SiteAdmin/Views/Restaurants/Create.cshtml
+++ b/QuickBite/Areas/SiteAdmin/Views/Restaurants/Create.cshtml
@@ -32,6 +32,17 @@
                 <span asp-validation-for="Photo" class="text-red-500 text-sm mt-1"></span>
             </div>
 
+            <div>
+                <label asp-for="RestaurantOwenrId" class="block text-sm font-medium text-gray-700 mb-1">Restaurant Owner</label>
+                <select asp-for="RestaurantOwenrId"
+                        class="form-select w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        asp-items="@( (IEnumerable<SelectListItem>)ViewData["RestaurantOwners"] )">
+                    <option value="">Select an Owner</option>
+                </select>
+
+                <span asp-validation-for="RestaurantOwenrId" class="text-red-500 text-sm mt-1"></span>
+            </div>
+
             <div class="flex justify-end space-x-4">
                 <input type="submit" value="Create" class="px-4 py-2 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" />
                 <a asp-action="Index" class="px-4 py-2 bg-gray-300 text-gray-800 rounded-md shadow hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2">
@@ -41,7 +52,6 @@
         </form>
     </div>
 </div>
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
