--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <div class="flex gap-4 items-center justify-end w-full md:w-[200px]">
 @if (SignInManager.IsSignedIn(User))
